[package]
name = "xs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
bincode = "1.3.3"
bytes = "1.6.0"
cacache = "13"
clap = { version = "4", features = ["derive"] }
fjall = "0.6.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
scru128 = { version = "3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssri = "9.2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["compat"] }

[dev-dependencies]
static_assertions = "1.1.0"
temp-dir = "0.1.13"
