[package]
name = "xs"
version = "0.1.0"
edition = "2021"

[lib]
name = "xs"

[[bin]]
name = "xs"

[dependencies]
async-std = "1.12.0"
bytes = "1.6.0"
cacache = "13"
clap = { version = "4", features = ["derive"] }
fjall = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
scru128 = { version = "3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
ssri = "9.2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["compat"] }

[dev-dependencies]
assert_cmd = "2.0.14"
duct = "0.13.7"
static_assertions = "1.1.0"
tempfile = "3.10.1"
