[package]
name = "cross-stream"
edition = "2021"
version = "0.8.0"
rust-version = "1.88.0"
description = "An event stream store for personal, local-first use, specializing in event sourcing."
license = "MIT"
repository = "https://github.com/cablehead/xs"
homepage = "https://github.com/cablehead/xs"
documentation = "https://cablehead.github.io/xs/"
readme = "README.md"
keywords = ["nu", "cli", "queue", "embedded", "eventstore"]
categories = ["command-line-utilities", "embedded", "database"]
exclude = [
    ".github/",
    ".dagger/",
    ".claude/",
    "docs/",
    "examples/",
    "notes/",
    "changes/",
    "scripts/",
    "target/",
    "tests/",
    "*.png",
    "*.gif"
]

[lib]
name = "xs"

[[bin]]
name = "xs"
path = "src/main.rs"

[dependencies]
bytes = "1.6.0"
cacache = { version = "13", default-features = false, features = ["tokio-runtime", "mmap"] }
clap = { version = "4", features = ["derive"] }
fjall = "3.0.1"
futures = "0.3.31"
scru128 = { version = "3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
ssri = "9.2.0"
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
console = "0.15.8"
chrono = "0.4.38"
bon = "2.3"
tempfile = "3.23"

nu-cli = "0.109.1"
nu-command = { version = "0.109.1", features = ["sqlite"] }
nu-protocol = "0.109.1"
nu-cmd-lang = "0.109.1"
nu-engine = "0.109.1"
nu-parser = "0.109.1"

http = "1.1.0"
http-body-util = "0.1"
http-serde = "2.1.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["compat"] }
url = "2.5.0"
rustls = "0.23.28"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.6"
dirs = "5"
base64 = "0.22.1"
tracing-subscriber = "0.3.19"
iroh = "0.91.2"
iroh-base = "0.91.2"
rand = "0.8"
data-encoding = "2.6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["poll", "fs"] }

[target.'cfg(windows)'.dependencies]
win_uds = "=0.2.0"

[dev-dependencies]
assert_cmd = "2.0.14"
duct = "0.13.7"
static_assertions = "1.1.0"
tracing-subscriber = "0.3.18"
